tests/valid/MethodCall_Valid_3.whiley
void f(int x):
    out->println(str(x))

void main([string] args):
    this->f(1)
