tests/invalid/Function_CompileFail_4.whiley
int f(int x):
    print str(x)

void main([string] args):
    f(1)
